# hashcat-python

./: .gitignore  README.md  example.py  setup.cfg
hashcat/: HashcatController.py  Modes.py  __init__.py
tests/: test_modes.py
