[metadata]
name = hashcat-python
version = attr: hashcat.__version__
description = Control hashcat with python
long_description = file: README.md
author = samfelt
url = https://github.com/samfelt/hashcat-python
license_files = LICENSE.txt
classifier = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:

[options.extras_require]
dev = 
    pre-commit>=2.20.0
    pytest>=7.1.13

[options.packages.find]
exclude = 
    tests*
    data*
    notes*

